initiated notebook for GAN exploration

--- a/image_acquisition.ipynb
+++ b/image_acquisition.ipynb
@@ -219,9 +219,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url= \"https://www.cs.toronto.edu/~vmnih/data/mass_roads/train/map/index.html\"\n",
+    "# url= \"https://www.cs.toronto.edu/~vmnih/data/mass_roads/train/map/index.html\"\n",
     "\n",
-    "download_links(url)"
+    "# download_links(url)"
    ]
   },
   {
@@ -229,7 +229,9 @@
    "metadata": {},
    "source": [
     "NOTE: I'm rerunning the download script because I didn't enter the correct file location. This will prove useful as I can cross examine the number\n",
-    "of images in both directories. This will allow me to confirm no duplicate files were written during the previous attempts."
+    "of images in both directories. This will allow me to confirm no duplicate files were written during the previous attempts.\n",
+    "\n",
+    "FINDING: It timed out at ~950 images, which is less than the original, but is enough to serve my purpose"
    ]
   },
   {
