--- a/environment_testing.ipynb
+++ b/environment_testing.ipynb
@@ -127,9 +127,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (ml_base)",
    "language": "python",
-   "name": "python3"
+   "name": "ml_base"
   },
   "language_info": {
    "codemirror_mode": {
