--- a/image_acquisition.ipynb
+++ b/image_acquisition.ipynb
@@ -251,9 +251,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (ml_base)",
    "language": "python",
-   "name": "python3"
+   "name": "ml_base"
   },
   "language_info": {
    "codemirror_mode": {
