working on image processing

--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -22,6 +22,7 @@
     "from keras.layers.convolutional import UpSampling2D, Conv2D\n",
     "from keras.models import Sequential, Model\n",
     "from keras.optimizers import Adam\n",
+    "from tensorflow import keras\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -29,6 +30,83 @@
     "\n",
     "import sys\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datagen = keras.preprocessing.image.ImageDataGenerator(\n",
+    "                rescale=1./255)\n",
+    "\n",
+    "images_path = os.path.join('images/road_maps')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1132 images belonging to 3 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_size = 150\n",
+    "batch_size = 32\n",
+    "\n",
+    "images_generator = datagen.flow_from_directory(\n",
+    "                'images/',  # Source directory for the training images\n",
+    "                target_size=(image_size, image_size),\n",
+    "                batch_size=batch_size,\n",
+    "                # Since we use binary_crossentropy loss, we need binary labels\n",
+    "                class_mode='binary')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'images/road_maps'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'ntpath' from 'C:\\\\Users\\\\kyled\\\\anaconda3\\\\envs\\\\ml_base\\\\lib\\\\ntpath.py'>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path"
    ]
   },
   {
