got the flow_from_directory working

--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 1132 images belonging to 3 classes.\n"
+      "Found 981 images belonging to 2 classes.\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
     "batch_size = 32\n",
     "\n",
     "images_generator = datagen.flow_from_directory(\n",
-    "                'images/',  # Source directory for the training images\n",
+    "                images_path,  # Source directory for the training images\n",
     "                target_size=(image_size, image_size),\n",
     "                batch_size=batch_size,\n",
     "                # Since we use binary_crossentropy loss, we need binary labels\n",
@@ -71,40 +71,338 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'images/road_maps'"
+       "(array([[[[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]]],\n",
+       " \n",
+       " \n",
+       "        [[[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [1., 1., 1.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [1., 1., 1.]]],\n",
+       " \n",
+       " \n",
+       "        [[[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [1., 1., 1.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]]],\n",
+       " \n",
+       " \n",
+       "        ...,\n",
+       " \n",
+       " \n",
+       "        [[[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]]],\n",
+       " \n",
+       " \n",
+       "        [[[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [1., 1., 1.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]]],\n",
+       " \n",
+       " \n",
+       "        [[[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]]]], dtype=float32),\n",
+       " array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
+       "       dtype=float32))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "images_path"
+    "images_generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'ntpath' from 'C:\\\\Users\\\\kyled\\\\anaconda3\\\\envs\\\\ml_base\\\\lib\\\\ntpath.py'>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.path"
    ]
