noted to self for next steps

--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -70,6 +70,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOTE TO SELF : NEXT STEP : determine the data structure of images_generator (needed for feeding to the GAN properly)\n",
+    "\n",
+    "I believe image_generator[X][Y][Z] is such that X is the batch, Y is the image, and Z is the image data? I'm not 100% sure"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
