fixed directory of images

--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -73,14 +73,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NOTE TO SELF : NEXT STEP : determine the data structure of images_generator (needed for feeding to the GAN properly)\n",
+    "NOTE TO SELF - NEXT STEPS : determine images_generator architecture (for feeding correct data to GAN)\n",
     "\n",
-    "I believe image_generator[X][Y][Z] is such that X is the batch, Y is the image, and Z is the image data? I'm not 100% sure"
+    "i'm pretty sure images_generator[X][Y][Z] is such that X is batch, Y is image, and Z is image data? but im not sure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -120,6 +120,57 @@
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.]],\n",
        " \n",
+       "         [[1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]]],\n",
+       " \n",
+       " \n",
+       "        [[[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [1., 1., 1.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [1., 1., 1.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
        "         [[0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
@@ -147,33 +198,7 @@
        " \n",
        "         [[0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         ...,\n",
-       " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
        "          [1., 1., 1.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
        "          ...,\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
@@ -185,31 +210,6 @@
        "          ...,\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
-       "          [1., 1., 1.]]],\n",
-       " \n",
-       " \n",
-       "        [[[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [1., 1., 1.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [1., 1., 1.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [1., 1., 1.],\n",
        "          [0., 0., 0.]],\n",
        " \n",
        "         ...,\n",
@@ -227,14 +227,14 @@
        "          [0., 0., 0.],\n",
        "          ...,\n",
        "          [0., 0., 0.],\n",
-       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
        "          [0., 0., 0.]],\n",
        " \n",
        "         [[0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          ...,\n",
-       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.]]],\n",
        " \n",
@@ -246,7 +246,7 @@
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          ...,\n",
-       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.]],\n",
        " \n",
@@ -254,7 +254,7 @@
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          ...,\n",
-       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.]],\n",
        " \n",
@@ -329,7 +329,7 @@
        " \n",
        "         [[0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
-       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
        "          ...,\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
@@ -344,7 +344,7 @@
        "          [0., 0., 0.]]],\n",
        " \n",
        " \n",
-       "        [[[0., 0., 0.],\n",
+       "        [[[1., 1., 1.],\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          ...,\n",
@@ -372,19 +372,19 @@
        " \n",
        "         [[0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
+       "          [1., 1., 1.],\n",
        "          ...,\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.]],\n",
        " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
+       "         [[1., 1., 1.],\n",
+       "          [1., 1., 1.],\n",
        "          [0., 0., 0.],\n",
        "          ...,\n",
        "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
+       "          [1., 1., 1.],\n",
+       "          [1., 1., 1.]],\n",
        " \n",
        "         [[0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
@@ -398,13 +398,13 @@
        "       dtype=float32))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "images_generator"
+    "images_generator[]"
    ]
   },
   {
